--- a/Resources/views/Registration/register.html.twig
+++ b/Resources/views/Registration/register.html.twig
@@ -7,4 +7,5 @@
             <input type="submit" value="{{ '_mg.user.registration.button.submit'|trans }}"/>
         </div>
     </form>
+    {% include "MagiceUserBundle::oauth.html.twig" %}
 {% endblock mg_user_content %}
