--- a/Resources/views/Resetting/checkEmail.html.twig
+++ b/Resources/views/Resetting/checkEmail.html.twig
@@ -1,9 +1,7 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "MagiceUserBundle::layout.html.twig" %}
 
-{% trans_default_domain 'FOSUserBundle' %}
-
-{% block fos_user_content %}
+{% block mg_user_content %}
 <p>
-{{ 'resetting.check_email'|trans({'%email%': email}) }}
+{{ '_mg.user.resetting.check_email'|trans({'%email%': email}) }}
 </p>
 {% endblock %}
