--- a/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,7 +1,5 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "MagiceUserBundle::layout.html.twig" %}
 
-{% trans_default_domain 'FOSUserBundle' %}
-
-{% block fos_user_content %}
-<p>{{ 'resetting.password_already_requested'|trans }}</p>
-{% endblock fos_user_content %}
+{% block mg_user_content %}
+<p>{{ '_mg.user.resetting.password_already_requested'|trans }}</p>
+{% endblock mg_user_content %}
