--- a/Resources/views/Resetting/reset.html.twig
+++ b/Resources/views/Resetting/reset.html.twig
@@ -1,5 +1,12 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "MagiceUserBundle::layout.html.twig" %}
 
-{% block fos_user_content %}
-{% include "FOSUserBundle:Resetting:reset_content.html.twig" %}
-{% endblock fos_user_content %}
+{% block mg_user_content %}
+
+    <form action="{{ path('mg_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST">
+        {{ form_widget(form) }}
+        <div>
+            <input type="submit" value="{{ 'resetting.reset.submit'|trans }}"/>
+        </div>
+    </form>
+
+{% endblock mg_user_content %}
